# Boost_Asio

./: .gitignore  Boost Asio.sln  CMakeLists.txt  README.md
Boost Asio/: Boost Asio.vcxproj  Boost Asio.vcxproj.filters  Client.h  Synchronising_handlers_in_multithreaded programs.h  handler_as_a_function_member.h  main.cpp  synch and asynch.h
Client/: CMakeLists.txt  main.cpp
NetCommon/: CMakeLists.txt  Client.h  Connection.h  ConnectionClient.h  ConnectionServer.h  CustomMsgTypes.h  IClient.h  MessageWithConnection.h  NetCommon.vcxproj  NetCommon.vcxproj.filters  NetMessage.h  Server.h  ThreadGuard.h  ThreadSafeQueue.h
Playground and Tests/: Playground and Tests.vcxproj  Playground and Tests.vcxproj.filters  httpConnector.h  main.cpp
Server/: CMakeLists.txt  CurrentDate.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  tcpAsyncServer.h  tcpConnection.h
